# ANALISING_banking_transactions

./: .env  .env_template  .gitignore  .isort  .mypy  README.md  config.py  pyproject.toml
src/: log_file.json  main.py  reports.py  services.py  utils.py  views.py
tests/: .coverage  test_reports.py  test_services.py  test_utils.py  test_views.py
