[tool.poetry]
name = "analyzing-banking-transactions"
version = "0.1.0"
description = ""
authors = ["Irina Prokopova <irina-prokopova.style@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
